--- a/package.xml
+++ b/package.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <package format="2">
   <name>coms</name>
   <version>0.0.1</version>
@@ -5,10 +6,18 @@
   Distributed Communication Protocol for Robots running ROS1.
   </description>
   <maintainer email="tylerferrara123@gmail.com">Tyler Ferrara</maintainer>
+  <author>Tyler Ferrara</author>
+
   <license>MIT</license>
+
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>std_msgs</run_depend>
+  <build_export_depend>rospy</build_export_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+
+  <export>
+  </export>
 </package>
