--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ services:
   - docker
 
 before_install:
-  - docker-compose up
+  - docker-compose up -d
+  - docker exec -it coms-novnc-1 make -f /root/catkin_ws/src/Makefile check-health
 
 script:
-  - docker ps
+  - docker exec -it coms-novnc-1 make -f /root/catkin_ws/src/Makefile test
 
