--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
 
 before_install:
   - docker-compose up -d
-  - docker exec -it coms-novnc-1 make -f /root/catkin_ws/src/Makefile check-health
+  - docker exec -it $(docker ps --format "{{.ID}}") make -f /root/catkin_ws/src/Makefile check-health
 
 script:
-  - docker exec -it coms-novnc-1 make -f /root/catkin_ws/src/Makefile test
+  - docker exec -it $(docker ps --format "{{.ID}}") make -f /root/catkin_ws/src/Makefile test
 
