--- a/coms/CMakeLists.txt
+++ b/coms/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   nav_msgs
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -54,11 +55,11 @@ catkin_python_setup()
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+   FILES
+   MergeMap.srv
+   TriggerMerge.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -68,10 +69,10 @@ catkin_python_setup()
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(DEPENDENCIES
-  # std_msgs  # Or other packages containing msgs
-#  std_msgs
-#)
+generate_messages(DEPENDENCIES
+    std_msgs
+    nav_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -108,6 +109,7 @@ catkin_package(
   CATKIN_DEPENDS rospy
   std_msgs
   nav_msgs
+  message_runtime
 #  DEPENDS system_lib
 )
 
