--- a/coms/package.xml
+++ b/coms/package.xml
@@ -10,6 +10,8 @@
 
   <license>MIT</license>
 
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
