--- a/coms/CMakeLists.txt
+++ b/coms/CMakeLists.txt
@@ -10,6 +10,8 @@ project(coms)
 find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
+  nav_msgs
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -53,11 +55,11 @@ catkin_python_setup()
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+   FILES
+   MergeMap.srv
+   TriggerMerge.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -67,10 +69,10 @@ catkin_python_setup()
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(DEPENDENCIES
-  # std_msgs  # Or other packages containing msgs
-#  std_msgs
-#)
+generate_messages(DEPENDENCIES
+    std_msgs
+    nav_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -106,6 +108,8 @@ catkin_package(
 #  LIBRARIES my_robot_common
   CATKIN_DEPENDS rospy
   std_msgs
+  nav_msgs
+  message_runtime
 #  DEPENDS system_lib
 )
 
