--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 before_install:
-  - docker-compose build
-  - docker-compose up -d
+  - docker-compose build --no-cache
+  - docker-compose up
   - docker exec -it "$(docker ps -aqf 'name=coms*')" make -f /root/catkin_ws/src/Makefile check-health
 
 script:
