--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ros-net-sim"]
 	path = ros-net-sim
 	url = https://github.com/tylerferrara/ros-net-sim.git
+[submodule "argos_bridge"]
+	path = argos_bridge
+	url = https://github.com/nikopoulospet/argos_bridge.git
