--- a/coms/coms.toml
+++ b/coms/coms.toml
@@ -1,4 +1,9 @@
 [build-system]
 requires = [
-    "numpy==1.21.4"
+    "numpy==1.21.4",
+    "netifaces==0.11.0",
+    "pyyaml==5.3.1",
+    "scikit-image==0.18.3",
+    "pyquaternion==0.9.9",
+    "opencv-python==4.5.5.62"
 ]
