--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,5 @@
 	branch = main
 [submodule "argos_bridge"]
 	path = argos_bridge
-	url = https://github.com/nikopoulospet/argos_bridge.git
+	url = https://github.com/NESTLab/argos_bridge.git
+	branch = master
